<resources>
    <string name="app_name">TimeControl</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="iknow">我知道了</string>
    <string name="leftswipe">右划关闭哦</string>
    <string name="title_activity_ac_course_table">AcCourseTable</string>
    <string name="exit">退出登录</string>
    <string name="female">女</string>
    <string name="chongqinguiversity">重庆大学</string>
    <string name="software_academic">软件学院</string>
    <string name="six">六</string>
    <string name="five">五</string>
    <string name="four">四</string>
    <string name="three">三</string>
    <string name="two">二</string>
    <string name="seven">七</string>
    <string name="editevent">编辑事件</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="place">地点</string>
    <string name="type">类别</string>
    <string name="week_count">周数</string>
    <string name="normal_event">日常事件</string>
    <string name="course_event">课程事件</string>
    <string name="recycle">重复</string>
    <string name="every_monday">每周一</string>
    <string name="every_tuesday">每周二</string>
    <string name="every_wednesday">每周三</string>
    <string name="every_thursday">每周四</string>
    <string name="every_friday">每周五</string>
    <string name="every_saturday">每周六</string>
    <string name="every_sunday">每周天</string>
    <string name="no_recycle">不重复</string>
    <string name="share">分享</string>
    <string name="share_hint">可以加上分享的文本哦</string>
    <string-array name="recycle_string">
        <item>不重复</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">到底啦。。。</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_done">加载完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
</resources>
