<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="266dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="235dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:background="@drawable/edit_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/user"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/id_ac_my_tv_username"
            android:layout_width="0dp"
            android:background="@null"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/my_view_text"
            android:hint="Timecontroller"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_background"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/sex" />

        <TextView
            android:id="@+id/id_ac_my_tv_sex"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/female"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/my_view_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="235dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="40dp"
        android:background="@drawable/edit_background"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/school"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/id_ac_my_tv_school"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginRight="25dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:background="@null"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/my_view_text"
            android:hint="@string/chongqinguiversity"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_background"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/academic" />

        <TextView
            android:id="@+id/id_ac_my_tv_academic"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:hint="@string/software_academic"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/my_view_text"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/id_ac_my_btn_exit"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/register_btn_background"
        android:layout_marginTop="28sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#067e47"
        android:text="@string/exit"/>
</LinearLayout>